style() : change style pending page

--- a/index.css
+++ b/index.css
@@ -6,7 +6,7 @@
 
 body {
   font-family: "Segoe UI", sans-serif;
-  background: linear-gradient(135deg, #4e54c8, #8f94fb);
+  background: linear-gradient(135deg, #4ec87d, #8ffbc9);
   color: white;
   display: flex;
   align-items: center;
