--- a/my-portfolio/src/assets/styles/ProjectDetail.css
+++ b/my-portfolio/src/assets/styles/ProjectDetail.css
@@ -43,12 +43,13 @@
 }
 
 .project-detail a:hover {
-  background-color: #1e422c;
+  background-color: #5d9f76;
 }
 
 .project-detail .btn {
   display: inline-block;
   margin-top: 1.5rem;
+  
 }
 
 .project-images {
